@@ -1,3 +1,8 @@
+2004-01-22  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/net/mtu/eggplant/util/DefaultBean.java (DefaultBean): Fixed
+	some method names.
+
 2003-07-02  Jon Schewe  <jpschewe@mtu.net>
 
 	* src/net/mtu/eggplant/util/network/TCPServer.java: Fixed javadoc
